gestion des annonce,formulaire de creation et edition

--- a/templates/ad/index.html.twig
+++ b/templates/ad/index.html.twig
@@ -15,7 +15,7 @@
                     <small>Pas encore noté</small>
                 </div>
                 <a href="{{url}}">
-                    <img src="{{ad.coverImage}}" alt="Imafe de l'appartement"
+                    <img src="{{ad.coverImage}}" alt="Image de l'appartement"
                         style="height: 200px; width: 100%; display: block">
                 </a>
 
