--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -26,7 +26,7 @@
                      3 chambres, <strong>49&euro; / nuit </strong>
                      <small>Pas encore noté</small>
                  </div>
-                 <img src="http://placehold.it/1000x400" alt="Imafe de l'appartement"
+                 <img src="http://placehold.it/1000x400" alt="Image de l'appartement"
                      style="height: 200px; width: 100%; display: block">
 
                  <div class="card-body">
