--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -49,20 +49,22 @@
             </div>
         </div>
         <div class="col">
+        {% set a = ad.author %}
             <div class="row">
-                <div class="col-4">
-                    <img src="http://placehold.it/64x64" alt="Avatar de joseph">
+                <div class="col-3">
+                  <a href="{{ path('user_show', {'slug': a.slug}) }}">
+
+                   
+                    <img src="{{a.picture}}" class="avatar avatar-medium"  alt="Avatar de {{a.fullName}}">
+                     </a>
                 </div>
                 <div class="col">
-                    <h3>Joseph Dupont</h3>
-                    <span class="badge badge-primary">3 annonces</span>
+                     <a href="{{ path('user_show', {'slug': a.slug}) }}">
+                        <h3>{{a.fullName}}</h3>
+                    </a>
+                    <span class="badge badge-primary">{{a.ads | length}} annonces</span>
                 </div>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur vero et vitae atque dolores
-                    commodi possimus nobis. Adipisci, culpa cumque!</p>
-                <p>Quae nihil odio vel porro iste magnam sed tenetur, mollitia molestias velit, esse aperiam fugit sunt
-                    enim. Minima, libero eaque.</p>
-                <p>Soluta at sunt officiis, fuga ducimus id, beatae est ab consequatur architecto saepe voluptas dolore
-                    consequuntur, quod sapiente voluptate maiores.</p>
+                {{ a.description | raw }}
             </div>
 
         </div>
