--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,36 +1,54 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="{{path('homepage')}}">SymBNB </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="# navbarColor02"
-        aria-controls="navbarColor02" aria-extended="false" aria-label="Basculer la navigation ">
-        <span class="navbar-toggler-icon"> </span>
+<nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+
+    <a class="navbar-brand" href="{{ path('homepage') }}">SymBNB !</a>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarColor02">
+    <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item ">
-                <a class="nav-link" href="{{path('homepage')}}"> Accueil</a>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('homepage') }}">Accueil</a>
             </li>
-            <li class="nav-item ">
-                <a class="nav-link" href="{{path('ads_index')}}"> Annonces</a>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('ads_index') }}">Annonces</a>
             </li>
-
-
         </ul>
-        <Ul class="navbar-nav ml-auto">
-            <li class="navbar-item">
-                <a href="#" class="nav-link">Mon compte</a>
-            </li>
-        </Ul>
+        <ul class="navbar-nav ml-auto">
+            {% if app.user %}
+                <li class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="accountDropdownLink">
+                        <img src="{{app.user.picture}}" class="avatar avatar-mini" alt="Avatar de {{app.user.fullName}}"> {{app.user.fullName}}
+                    </a>
+
+                    <div class="dropdown-menu dropdown-menu-right" aria labelledby="accountDropdownLink">
+                        <a href="{{ path('ads_create') }}" class="dropdown-item">Créer une annonce</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="{{ path('account_index') }}" class="dropdown-item">Mon compte</a>
+                        <a href="{{ path('account_profile') }}" class="dropdown-item">Modifier mon profil</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="{{ path('account_logout') }}" class="dropdown-item">Déconnexion</a>
+                    </div>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a href="{{ path('account_register') }}" class="new-link">Inscription</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{{ path('account_login') }}" class="new-link">Connexion</a>
+                </li>
+            {% endif %}
+        </ul>
     </div>
 </nav>
 
-{% for label, message in app.flashes %}
-<div class="contaire">
-    <div class="alert alert-{{label}}">
-        {% for message in message %}
-        <p>{{message | raw }}</p>
-        {% endfor %}
+{% for label, messages in app.flashes %}
+    <div class="container">
+        <div class="alert-{{ label }}">
+            {% for message in messages %}
+                <p>{{ message | raw }}</p>
+            {% endfor %}
+        </div>
     </div>
-</div>
-
 {% endfor %}
