--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>SymBNB - {% block title %}Welcome!{% endblock %}</title>
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/app.css">
+  <link rel="stylesheet" href={{asset('/css/bootstrap.min.css')}}>
+  <link rel="stylesheet" href= {{asset('/css/app.css')}}>
   {% block stylesheets %}{% endblock %}
 </head>
 
